--- a/automl-lecture-completed.ipynb
+++ b/automl-lecture-completed.ipynb
@@ -53,7 +53,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### AutoML with TPOT"
+    "### AutoML with TPOT\n",
+    "http://epistasislab.github.io/tpot/\n",
+    "\n",
+    "TPOT is a Python Automated Machine Learning tool that optimizes machine learning pipelines using genetic programming.\n"
    ]
   },
   {
@@ -1477,7 +1480,7 @@
     "classifier = TPOTClassifier(\n",
     "    n_jobs=-1,   # Use all availabe cores\n",
     "    scoring='accuracy',\n",
-    "    max_time_mins=5,\n",
+    "    max_time_mins=5,  # Can set max time limit\n",
     "    random_state=__RANDOM_STATE, \n",
     "    verbosity=2, \n",
     ")\n",
@@ -1507,7 +1510,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### AutoML with AutoKeras"
+    "### AutoML with AutoKeras\n",
+    "Theory: https://arxiv.org/abs/1806.10282\n",
+    "\n",
+    "\"Framework enabling Bayesian optimization to guide the network morphism for efficient neural architecture search. The framework develops a neural network kernel and a tree-structured acquisition function optimization algorithm to efficiently explores the search space. Intensive experiments on real-world benchmark datasets have been done to demonstrate the superior performance of the developed framework over the state-of-the-art methods. Moreover, we build an opensource AutoML system based on our method, namely Auto-Keras.\"\n",
+    "\n",
+    "\"The system runs in parallel on CPU and GPU, with an adaptive search strategy for different GPU memory limits.\"\n",
+    "\n",
+    "API: https://autokeras.com/"
    ]
   },
   {
