--- a/automl-lecture-completed.ipynb
+++ b/automl-lecture-completed.ipynb
@@ -45,6 +45,8 @@
    "outputs": [],
    "source": [
     "# Notebook constants that we will return to \n",
+    "# TODO: What is name mangling? \n",
+    "# TODO: Benefits of pathlib?\n",
     "__DATA_PATH = pathlib.Path(\"./data\")\n",
     "__RANDOM_STATE = 42"
    ]
@@ -1394,7 +1396,9 @@
     "fig.update_layout(title=\"PCA of Iris Dataset\", title_x=0.5)\n",
     "fig.update_xaxes(title=\"Principal Component 1\")\n",
     "fig.update_yaxes(title=\"Principal Component 2\")\n",
-    "fig.show()"
+    "fig.show()\n",
+    "\n",
+    "# TODO: What does the position of the components signify?"
    ]
   },
   {
@@ -1535,7 +1539,7 @@
     "\n",
     "# We will search over 5000 training images only.\n",
     "# Then we can fine-tune the best model using entire dataset. \n",
-    "# This is an example of _____? architecture evaluation. \n",
+    "# TODO: This is an example of _____? architecture evaluation. \n",
     "\n",
     "\"\"\"\n",
     "  | Label | Description |\n",
@@ -1622,6 +1626,7 @@
    ],
    "source": [
     "from functools import reduce\n",
+    "# TODO: What does reduce do?\n",
     "def image_row(x):\n",
     "        images = tf.unstack(x)\n",
     "        row = reduce(lambda a,b: tf.concat((a,b), axis=1), images)\n",
@@ -1656,6 +1661,7 @@
    ],
    "source": [
     "plt.figure(figsize=(18,12))\n",
+    "# TODO: Seaborn has the best histograms\n",
     "sns.histplot(X_train.mean(axis=(1,2))[:,0], kde=True, color=\"red\")\n",
     "sns.histplot(X_train.mean(axis=(1,2))[:,1], kde=True, color=\"green\")\n",
     "sns.histplot(X_train.mean(axis=(1,2))[:,2], kde=True, color=\"blue\")\n",
@@ -1672,7 +1678,7 @@
     "input_node = ak.ImageInput()\n",
     "output_node = ak.ImageBlock(\n",
     "    # Only search Vanilla Conv architectures.\n",
-    "    block_type=\"vanilla\",\n",
+    "    block_type=\"vanilla\",  # Custom block used to populate hypermodel\n",
     "    # Normalize the dataset.\n",
     "    normalize=True,\n",
     "    # Perform augmentation\n",
@@ -1681,7 +1687,7 @@
     "output_node = ak.ClassificationHead()(output_node)\n",
     "clf = ak.AutoModel(\n",
     "    inputs=input_node, outputs=output_node, overwrite=True, max_trials=100,\n",
-    "    directory= __DATA_PATH / \"vanilla-conv\", seed=__RANDOM_STATE, objective=\"val_accuracy\"\n",
+    "    directory= __DATA_PATH / \"vanilla-conv\", seed=__RANDOM_STATE, objective=\"val_accuracy\"  # TODO: Note __truediv__ behavior of Path\n",
     ")"
    ]
   },
@@ -1731,7 +1737,7 @@
     }
    ],
    "source": [
-    "clf.fit(X_train_tiny, y_train_tiny, epochs=5)"
+    "clf.fit(X_train_tiny, y_train_tiny, epochs=5)  # TODO: Fit 100 models for 5 epochs each!"
    ]
   },
   {
@@ -2903,7 +2909,7 @@
     }
    ],
    "source": [
-    "model = clf.tuner.get_best_model()\n",
+    "model = clf.tuner.get_best_model()  # TODO: Take a look at the best model we found\n",
     "model.summary()\n"
    ]
   },
@@ -2921,7 +2927,7 @@
     }
    ],
    "source": [
-    "model.save(__DATA_PATH / \"vanilla-conv\" / \"vanilla-conv-model\")"
+    "model.save(__DATA_PATH / \"vanilla-conv\" / \"vanilla-conv-model\")  # TODO: Save once your search is completed "
    ]
   },
   {
@@ -2940,7 +2946,7 @@
    ],
    "source": [
     "loss, acc = clf.evaluate(X_test, y_test)\n",
-    "print(f\"Accuracy score with AutoKeras classifier: {acc*100:.2f}%\")\n"
+    "print(f\"Accuracy score with AutoKeras classifier: {acc*100:.2f}%\")  # Not so good, but only using 10% of data\n"
    ]
   },
   {
@@ -2960,16 +2966,7 @@
     }
    ],
    "source": [
-    "clf.export_model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_train_ohe = tf.one_hot(indices=y_train.flatten(), depth = len(np.unique(y_train)))"
+    "clf.export_model()  # Another option autokeras specific to export model"
    ]
   },
   {
@@ -2979,6 +2976,10 @@
    "outputs": [],
    "source": [
     "# https://github.com/keras-team/autokeras/blob/master/autokeras/auto_model.py \n",
+    "# TODO: Let's try to fine tune the best vanilla model\n",
+    "\n",
+    "# See auto_model.py source, we want to make use of adapt method for auto preprocessing.\n",
+    "\n",
     "def ak_get_dataset(X,y,clf):\n",
     "    x = clf._adapt(X, clf.inputs, 32)\n",
     "    y = clf._adapt(y, clf._heads, 32)\n",
@@ -3075,7 +3076,7 @@
     "from sklearn.metrics import accuracy_score\n",
     "y_pred = model.predict(test_dataset)\n",
     "acc = accuracy_score(y_test, y_pred.argmax(axis=1))\n",
-    "print(f\"Accuracy score with AutoKeras classifier after full dataset fit: {acc*100:.2f}%\")"
+    "print(f\"Accuracy score with AutoKeras classifier after full dataset fit: {acc*100:.2f}%\")  # Pretty good for 10 epochs! More to improve"
    ]
   },
   {
@@ -3106,7 +3107,8 @@
    "source": [
     "from autokeras.tuners import task_specific\n",
     "for hp in task_specific.IMAGE_CLASSIFIER:\n",
-    "    print(f\"{hp}\\n\")"
+    "    print(f\"{hp}\\n\")\n",
+    "# NOTE: This is the default tuner initial hyper params. Note block types."
    ]
   },
   {
@@ -4122,6 +4124,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NOTE: A few more params than our vanilla model!"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
@@ -4205,7 +4216,7 @@
     }
    ],
    "source": [
-    "clf.tuner.search_space_summary()"
+    "clf.tuner.search_space_summary()  # NOTE: Large search space! Will take hours to days to explore fully."
    ]
   },
   {
@@ -4226,7 +4237,7 @@
     "test_dataset = ak_get_dataset(X_test, y_test, clf)\n",
     "y_pred = model.predict(test_dataset)\n",
     "acc = accuracy_score(y_test, y_pred.argmax(axis=1))\n",
-    "print(f\"Accuracy score with AutoKeras-Efficient-Net classifier after full dataset fit: {acc*100:.2f}%\")  # Single epoch!"
+    "print(f\"Accuracy score with AutoKeras-Efficient-Net classifier after full dataset fit: {acc*100:.2f}%\")  # Single epoch score! "
    ]
   },
   {
@@ -4280,7 +4291,8 @@
     }
    ],
    "source": [
-    "clf.tuner.oracle.hyperparameters.space"
+    "clf.tuner.oracle.hyperparameters.space\n",
+    "# NOTE: AutoKeras and Keras Tuner are closely related. (AK depends on Keras Tuner). These hyperparameters define search space."
    ]
   },
   {
@@ -4371,6 +4383,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NOTE: Lots of params, but mostly we are relying on image net weights for evaluating our different classifier heads."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 70,
    "metadata": {},
    "outputs": [],
@@ -4399,6 +4420,8 @@
     }
    ],
    "source": [
+    "# TODO: Demo TF board if we have time\n",
+    "# tensorboard --logdir=logs --host localhost --port 8888\n",
     "tf.config.run_functions_eagerly(False)\n",
     "tb_callback = tf.keras.callbacks.TensorBoard(\"./logs\")\n",
     "tuner = kt.BayesianOptimization(\n",
@@ -4541,47 +4564,6 @@
    ],
    "source": [
     "tuner.search_space_summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"eff_net_cifar10\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " input (InputLayer)          [(32, 32, 32, 3)]         0         \n",
-      "                                                                 \n",
-      " efficientnetb0 (Functional)  (None, 1, 1, 1280)       4049571   \n",
-      "                                                                 \n",
-      " flatten_3 (Flatten)         (32, 1280)                0         \n",
-      "                                                                 \n",
-      " dense_6 (Dense)             (32, 512)                 655872    \n",
-      "                                                                 \n",
-      " activation_6 (Activation)   (32, 512)                 0         \n",
-      "                                                                 \n",
-      " dense_7 (Dense)             (32, 10)                  5130      \n",
-      "                                                                 \n",
-      " activation_7 (Activation)   (32, 10)                  0         \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 4,710,573\n",
-      "Trainable params: 661,002\n",
-      "Non-trainable params: 4,049,571\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "hp = tuner.get_best_hyperparameters()\n",
-    "best_model = get_eff_net_backbone_model(**hp[0].values)\n",
-    "best_model.summary()"
    ]
   },
   {
@@ -4824,7 +4806,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ray Tune"
+    "### Ray Tune\n",
+    "\n",
+    "Ray provides a simple, universal API for building distributed applications.\n",
+    "\n",
+    "Ray accomplishes this mission by:\n",
+    "\n",
+    "- Providing simple primitives for building and running distributed applications.\n",
+    "\n",
+    "- Enabling end users to parallelize single machine code, with little to zero code changes.\n",
+    "\n",
+    "- Including a large ecosystem of applications, libraries, and tools on top of the core Ray to enable complex applications.\n",
+    "\n",
+    "White paper: https://docs.google.com/document/d/1lAy0Owi-vPz2jEqBSaHNQcy2IBSDEHyXNOQZlGuj93c/preview \n",
+    "\n",
+    "Alternative to Spark / MLLib\n"
    ]
   },
   {
@@ -5893,7 +5889,7 @@
     "from ray import tune\n",
     "\n",
     "\n",
-    "def get_data(data_dir = __DATA_PATH / \"cifar10\"):\n",
+    "def get_data(data_dir = __DATA_PATH / \"cifar10\"):  # NOTE: Providing datapath is important to share dataset between threads / nodes.\n",
     "    transform = transforms.Compose([\n",
     "        transforms.ToTensor(),\n",
     "        transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
@@ -6012,7 +6008,7 @@
     "# Print the images\n",
     "im = make_grid(images[:10], nrow=5)  # the default nrow is 8\n",
     "plt.figure(figsize=(12,6))\n",
-    "plt.imshow(np.transpose(im.numpy(), (1, 2, 0)))  # PyTorch image format NCHW -> Channels first!\n",
+    "plt.imshow(np.transpose(im.numpy(), (1, 2, 0)))  # NOTE: PyTorch image format NCHW -> Channels first!\n",
     "plt.axis(\"off\")\n",
     "plt.show()"
    ]
@@ -6115,7 +6111,7 @@
     "hp = {\n",
     "    \"conv1_width\": tune.choice([3,6,9]),\n",
     "    \"conv2_width\": tune.choice([9,18]),\n",
-    "    \"epochs\": 3 # We will only use 1 epoch for this trial\n",
+    "    \"epochs\": 3 # We will only use 3 epoch for this trial\n",
     "}"
    ]
   },
@@ -6159,7 +6155,9 @@
     "    num_samples=3,\n",
     "    local_dir = __DATA_PATH / \"ray-tune\",\n",
     "    verbose=1\n",
-    ")"
+    ")\n",
+    "\n",
+    "# NOTE: Check out that duration! Ray will multi thread when run locally "
    ]
   },
   {
